--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">Hakkımda</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+            <a class="nav-link js-scroll-trigger" href="#experience">Deneyim</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+            <a class="nav-link js-scroll-trigger" href="#education">Eğitim</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+            <a class="nav-link js-scroll-trigger" href="#skills">Yetenekler</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-          </li>
+            <a class="nav-link js-scroll-trigger" href="#interests">İlgi Alanları</a>
+          </li><!--
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
-          </li>
+            <a class="nav-link js-scroll-trigger" href="#awards">Ödüller</a>
+          </li>-->
         </ul>
       </div>
     </nav>
@@ -63,16 +63,16 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Clarence
-            <span class="text-primary">Taylor</span>
+          <h1 class="mb-0">Burak
+            <span class="text-primary">Karabıyık</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+          <div class="subheading mb-5">Eskişehir  ·
+            <a href="mailto:burak.mvr@gmail.com">burak.mvr@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+          <p class="lead mb-5">Siber güvenlik, yapay zeka,mobil uygulamalara ilgim var. Algoritma çözmeyi seviyorum. </p>
           <div class="social-icons">
             <a href="#">
-              <i class="fab fa-linkedin-in"></i>
+              <i class="fab fa-linkedin-in">burakkarabiyik</i>
             </a>
             <a href="#">
               <i class="fab fa-github"></i>
@@ -91,49 +91,29 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="experience">
         <div class="my-auto">
-          <h2 class="mb-5">Experience</h2>
+          <h2 class="mb-5">Deneyim</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Senior Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+              <h3 class="mb-0">Staj</h3>
+              <div class="subheading mb-3">Osmangazi Üniversitesi B.İ.D.B.</div>
+              <p>Bilgi işlem bölümünde ağ cihazları hakkında çalışıldı. Sanal ağ ortamı
+                laboratuvar oluşturuldu. Bu laboratuvar üzerinde çeşitli saldırı teknikleri
+                denendi.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2013 - Present</span>
+              <span class="text-primary">06/2017 - 07/2017</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Developer</h3>
-              <div class="subheading mb-3">Intelitec Solutions</div>
-              <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+              <h3 class="mb-0">Staj</h3>
+              <div class="subheading mb-3">Osmangazi Üniversitesi B.İ.D.B.</div>
+              <p>Dinamik bir alışveriş sitesi hazırlandı. C# Mvc kullanıldı.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">December 2011 - March 2013</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Junior Web Designer</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">July 2010 - December 2011</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Web Design Intern</h3>
-              <div class="subheading mb-3">Shout! Media Productions</div>
-              <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">September 2008 - June 2010</span>
+              <span class="text-primary">07/2016 - 08/2016</span>
             </div>
           </div>
 
@@ -145,28 +125,28 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="education">
         <div class="my-auto">
-          <h2 class="mb-5">Education</h2>
+          <h2 class="mb-5">Eğitim</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">University of Colorado Boulder</h3>
-              <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
-              <p>GPA: 3.23</p>
+              <h3 class="mb-0">Sakarya Üniversitesi</h3>
+              <div class="subheading mb-3">Bilgisayar ve Bilişim Bilimleri Fakültesi</div>
+              <div>Bilgisayar Mühendisliği</div>
+              
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2006 - May 2010</span>
+              <span class="text-primary">2014 - 2018</span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">James Buchanan High School</h3>
-              <div class="subheading mb-3">Technology Magnet Program</div>
-              <p>GPA: 3.56</p>
+              <h3 class="mb-0">Süleyman Çakır Anadolu Lisesi</h3>
+              <div class="subheading mb-3"></div>
+              
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2002 - May 2006</span>
+              <span class="text-primary">2009-2013</span>
             </div>
           </div>
 
@@ -177,7 +157,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
-          <h2 class="mb-5">Skills</h2>
+          <h2 class="mb-5">Bilgisayar Bilgisi</h2>
 
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline dev-icons">
@@ -190,35 +170,35 @@
             <li class="list-inline-item">
               <i class="fab fa-js-square"></i>
             </li>
-            <li class="list-inline-item">
+          <!--  <li class="list-inline-item">
               <i class="fab fa-angular"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa-react"></i>
-            </li>
+            </li>-->
             <li class="list-inline-item">
               <i class="fab fa-node-js"></i>
-            </li>
+            </li><!--
             <li class="list-inline-item">
               <i class="fab fa-sass"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa-less"></i>
-            </li>
+            </li>-->
             <li class="list-inline-item">
               <i class="fab fa-wordpress"></i>
-            </li>
+            </li><!--
             <li class="list-inline-item">
               <i class="fab fa-gulp"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa-grunt"></i>
-            </li>
+            </li>-->
             <li class="list-inline-item">
               <i class="fab fa-npm"></i>
             </li>
           </ul>
-
+<!--
           <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
             <li>
@@ -233,7 +213,7 @@
             <li>
               <i class="fa-li fa fa-check"></i>
               Agile Development &amp; Scrum</li>
-          </ul>
+          </ul>-->
         </div>
       </section>
 
@@ -241,12 +221,12 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+          <h2 class="mb-5">İlgi Alanları</h2>
+          <p>Bilim-Kurgu fantastik filmlere karşı ilgim var. Sinemaya gitmekten çok keyif alıyorum. Kahvesiz hiçbirşey yapmayan bir insanım. <br><br>br>Koşmayı spor yapmayı aşırı seviyorum. Boş vakitlerimi spor yaparak geçiriyorum. </p>
           <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
         </div>
       </section>
-
+<!--
       <hr class="m-0">
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
@@ -282,7 +262,7 @@
           </ul>
         </div>
       </section>
-
+    -->
     </div>
 
     <!-- Bootstrap core JavaScript -->
