--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
+            <li class="" >
+                <a style="color:black;font-size: 26px" class="nav-link js-scroll-trigger" href="#">Burak Karabıyık</a>
+              </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">Hakkımda</a>
           </li>
@@ -71,17 +74,14 @@
           </div>
           <p class="lead mb-5">Siber güvenlik, yapay zeka,mobil uygulamalara ilgim var. Algoritma çözmeyi seviyorum. </p>
           <div class="social-icons">
-            <a href="#">
-              <i class="fab fa-linkedin-in">burakkarabiyik</i>
+            <a href="https://www.linkedin.com/in/burak-karabiyik-36842b113/">
+              <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="#">
+            <a href="https://www.github.com/burakkarabiyik">
               <i class="fab fa-github"></i>
             </a>
-            <a href="#">
+            <a href="twitter.com/BurakKarabyk14">
               <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#">
-              <i class="fab fa-facebook-f"></i>
             </a>
           </div>
         </div>
@@ -128,7 +128,7 @@
           <h2 class="mb-5">Eğitim</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
+            <div class=" mr-auto">
               <h3 class="mb-0">Sakarya Üniversitesi</h3>
               <div class="subheading mb-3">Bilgisayar ve Bilişim Bilimleri Fakültesi</div>
               <div>Bilgisayar Mühendisliği</div>
@@ -157,9 +157,9 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
         <div class="my-auto">
-          <h2 class="mb-5">Bilgisayar Bilgisi</h2>
+          <h2 class="mb-5">Yetenekler</h2>
 
-          <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+          <div class="subheading mb-3">Kullandığı Programlama Dilleri </div>
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
               <i class="fab fa-html5"></i>
