--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <a href="https://www.github.com/burakkarabiyik">
               <i class="fab fa-github"></i>
             </a>
-            <a href="twitter.com/BurakKarabyk14">
+            <a href="https://www.twitter.com/BurakKarabyk14">
               <i class="fab fa-twitter"></i>
             </a>
           </div>
