--- a/index.html
+++ b/index.html
@@ -222,9 +222,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">İlgi Alanları</h2>
-          <p>Bilim-Kurgu fantastik filmlere karşı ilgim var. Sinemaya gitmekten çok keyif alıyorum. Kahvesiz hiçbirşey yapmayan bir insanım. <br><br>br>Koşmayı spor yapmayı aşırı seviyorum. Boş vakitlerimi spor yaparak geçiriyorum. </p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
-        </div>
+          <p>Bilim-Kurgu fantastik filmlere karşı ilgim var. Sinemaya gitmekten çok keyif alıyorum. Kahvesiz hiçbirşey yapmayan bir insanım. <br><br>Koşmayı spor yapmayı aşırı seviyorum. Boş vakitlerimi spor yaparak geçiriyorum. </p>
+          </div>
       </section>
 <!--
       <hr class="m-0">
