--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
             <a href="https://www.twitter.com/BurakKarabyk14">
               <i class="fab fa-twitter"></i>
             </a>
+
+            <a href="https://codeforces.com/profile/burakk">
+              <i class="fab fa-twitter"></i>
+            </a>
+
+            
           </div>
         </div>
       </section>
@@ -251,15 +257,16 @@
             </li>-->
             <li class="list-inline-item">
               <i class="fab fa-node-js"></i>
-            </li><!--
-            <li class="list-inline-item">
-              <i class="fab fa-sass"></i>
             </li>
+            <li class="list-inline-item">
+              <i class="fab fa-java"></i>
+            </li>
+            <!--
             <li class="list-inline-item">
               <i class="fab fa-less"></i>
             </li>-->
             <li class="list-inline-item">
-              <i class="fab fa-wordpress"></i>
+              <i class="fab fa-python"></i>
             </li><!--
             <li class="list-inline-item">
               <i class="fab fa-gulp"></i>
